TENTANDO CONECTAR O BANCO DE DADOS

--- a/login.html
+++ b/login.html
@@ -30,12 +30,11 @@
         <div class="right-login">
             <div class="card-login">
 
-                <form class="login-01" action="config.php" method="post"></form>
-                <hr>
+                <form class="login-01" action="config.php" method="post">
 
                 <h1>LOGIN</h1>
                 <div class="textfield">
-                    <label for="nome"><strong>Seu Nome</strong> (Opcional)</label>
+                    <label for="nome">Seu Nome</label>
                     <input type="text" name="nome" placeholder="Nome" required>
                 </div>
 
@@ -49,7 +48,8 @@
                     <input type="password" name="senha" placeholder="Senha" required>
                 </div>
 
-                <a class="link-site" href=index.html><input type="submit" value="login" class="btn-login"></a>
+                <input type="submit" value="login" class="btn-login" id="btnn">
+                </form>
             </div>
         </div>
     </div>
