tentando conectar ainda...........

--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
         <div class="right-login">
             <div class="card-login">
 
-                <form class="login-01" action="config.php" method="post">
+                <form class="login-01" action="config.php" method="POST">
 
                 <h1>LOGIN</h1>
                 <div class="textfield">
