--- a/index.html
+++ b/index.html
@@ -586,5 +586,8 @@
 
         <!--=============== MAIN JS ===============-->
         <script src="assets/js/main.js"></script>
+
+        <!--=============== CARRINHO ===============-->
+        <script src="assets/js/cart.js"></script>
     </body>
 </html>
