--- a/index.html
+++ b/index.html
@@ -603,5 +603,7 @@
 
         <!--=============== CARRINHO ===============-->
         <script src="assets/js/cart.js"></script>
+
+        <script src=""></script>
     </body>
 </html>
