--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
                     <div class="home__data">
                         <h1 class="home__title"><br>CAMISA DE TREINO - SELEÇÃO BRASILEIRA</h1>
                         <p class="home__description">
-                            Não perca a chance e aproveite, produto bastante estiloso e muito confortável em qualquer ocasião.Não perca a chance e compre já!
+                            Camisa de treino Azul Marinho, produto de <strong>maxima qualidade</strong>. Não perca a chance e compre já!
                         </p>
                         <span class="home__price">R$ 245,00</span>
 
                         <div class="home__btns">
-                            <a href="#" class="button button--gray button--small">
+                            <a href="https://wa.me/message/FBXH2AOCTJA2K1" class="button button--gray button--small">
                                 SAIBA MAIS
                             </a>
 
