--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
 
-        <title>Jonhpaes company</title>
+        <title>JA Sports</title>
     </head>
     <body>
 
@@ -58,7 +58,7 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    <img src="assets/img/logo_lanierStore2.svg" alt="" class="nav__logo-icon" width="22px"> Jonhpaes company
+                    <img src="assets/img/logo_lanierStore2.svg" alt="" class="nav__logo-icon" width="22px">JA Sport
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
@@ -129,7 +129,7 @@
                         <p class="home__description">
                             Camisa de treino Azul Marinho, produto de <strong>maxima qualidade</strong>. Não perca a chance e compre já!
                         </p>
-                        <span class="home__price">R$ 245,00</span>
+                        <span class="home__price">R$ 65,00</span>
 
                         <div class="home__btns">
                             <a href="https://wa.me/message/FBXH2AOCTJA2K1" class="button button--gray button--small">
@@ -425,24 +425,7 @@
             </section>
 
             <!--==================== NEWSLETTER ====================-->
-            <section class="newsletter section container">
-                <div class="newsletter__bg grid">
-                    <div>
-                        <h2 class="newsletter__title">Inscreva-se <br> agora</h2>
-                        <p class="newsletter__description">
-                            Não perca seus descontos. Inscreva-se em nosso e-mail 
-                            boletim informativo para obter as melhores ofertas, descontos, cupons, presentes e muito mais.
-                        </p>
-                    </div>
-
-                    <form action="" class="newsletter__subscribe">
-                        <input type="email" placeholder="Insira seu e-mail" class="newsletter__input">
-                        <button class="button">
-                            SUBSCREVER
-                        </button>
-                    </form>
-                </div>
-            </section>
+            
         </main>
 
         <!--==================== FOOTER ====================-->
