--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    <img src="assets/img/logo_lanierStore2.svg" alt="" class="nav__logo-icon" width="22px">JA Sport
+                    <img src="assets/img/logo_lanierStore2.svg" alt="" class="nav__logo-icon" width="22px">J/A Sport
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
