--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
                     <div class="testimonial__images">
                         <div class="testimonial__square"></div>
-                        <img src="assets/img/logo_lanierStore2.svg" alt="" class="testimonial__img">
+                        <img src="assets/img-ja-sport/ja_sport.svg" width="200px" alt="" class="testimonial__img">
                     </div>
                 </div>
             </section>
