--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--=============== FAVICON ===============-->
-        <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="assets/img-ja-sport/ja_sport.svg" type="image/x-icon">
 
         <!--=============== BOXICONS ===============-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
@@ -58,7 +58,7 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    <img src="assets/img/logo_lanierStore2.svg" alt="" class="nav__logo-icon" width="22px">J/A Sport
+                    <img src="assets/img-ja-sport/ja_sport.svg" alt="" class="nav__logo-icon" width="22px">J/A Sport
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
@@ -109,10 +109,10 @@
             <section class="home" id="home">
                 <div class="home__container container grid">
                     <div class="home__img-bg">
-                        <img src="assets/img-shopee/Camisa De Time Treino Azul Marinho.svg" alt="" class="home__img">
+                        <img src="assets/img-ja-sport/Camisa De Time Treino Azul Marinho.svg" alt="" class="home__img">
                     </div>
     
-                    <div class="home__social">
+                    <div class="home__social">  
                         <a href="https://www.facebook.com/jonh.paz.102" target="_blank" class="home__social-link">
                             Facebook
                         </a>
