--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
                                     <i class='bx bxs-quote-alt-left' ></i>
                                 </div>
                                 <p class="testimonial__description">
-                                    A melhor loja de roupas do mundo, o atendimento é excelente, além das roupas serem muitas bonitas o tecido é maravilhoso!
-                                    <strong>#RecomendoLanierStore</strong>
+                                    A melhor loja de camisas de time do mundo, o atendimento é excelente, as camisas tem o melhor tecido do mercado!
+                                    <strong>J/A Sport</strong>
                                 </p>
                                 <h3 class="testimonial__date">Abril 15. 2021</h3>
         
@@ -354,7 +354,7 @@
 
                     <div class="testimonial__images">
                         <div class="testimonial__square"></div>
-                        <img src="assets/img-ja-sport/ja_sport.svg" width="200px" alt="" class="testimonial__img">
+                        <img src="assets/img-ja-sport/ja_sport.svg" alt="" class="testimonial__img">
                     </div>
                 </div>
             </section>
