--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    <img src="assets/img-ja-sport/ja_sport.svg" alt="" class="nav__logo-icon" width="22px">J/A Sport
+                    <img src="assets/img-ja-sport/ja_sport.svg" alt="" class="nav__logo-icon" width="22px">Jp Sport
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
@@ -109,7 +109,7 @@
             <section class="home" id="home">
                 <div class="home__container container grid">
                     <div class="home__img-bg">
-                        <img src="assets/img-ja-sport/Camisa De Time Treino Azul Marinho.svg" alt="" class="home__img">
+                        <img src="assets/img-ja-sport/camisa - brasil - banner.svg" alt="" class="home__img">
                     </div>
     
                     <div class="home__social">  
