--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
 
-        <title>JA Sports</title>
+        <title>JA Store</title>
     </head>
     <body>
 
@@ -58,7 +58,7 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    <img src="assets/img-ja-sport/ja_sport.svg" alt="" class="nav__logo-icon" width="22px">Jp Sport
+                    <img src="assets/img-jp-sport/jp store (Logo).svg" alt="" class="nav__logo-icon" width="22px">Jp Store
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
@@ -109,7 +109,7 @@
             <section class="home" id="home">
                 <div class="home__container container grid">
                     <div class="home__img-bg">
-                        <img src="assets/img-ja-sport/camisa - brasil - banner.svg" alt="" class="home__img">
+                        <img src="assets/img-jp-sport/camisa - brasil - banner (500 × 500 px).svg" alt="" class="home__img">
                     </div>
     
                     <div class="home__social">  
@@ -125,18 +125,18 @@
                     </div>
     
                     <div class="home__data">
-                        <h1 class="home__title"><br>CAMISA DE TREINO - SELEÇÃO BRASILEIRA</h1>
+                        <h1 class="home__title"><br>CAMISA DA SELEÇÃO BRASILEIRA</h1>
                         <p class="home__description">
-                            Camisa de treino Azul Marinho, produto de <strong>maxima qualidade</strong>. Não perca a chance e compre já!
+                            Nova camisa da seleção brasileira, produto de <strong>maxima qualidade</strong>. Não perca a chance e compre já!
                         </p>
-                        <span class="home__price">R$ 65,00</span>
+                        <span class="home__price">R$ 109,90</span>
 
                         <div class="home__btns">
                             <a href="https://wa.me/message/FBXH2AOCTJA2K1" class="button button--gray button--small">
                                 SAIBA MAIS
                             </a>
 
-                            <a href="https://shope.ee/1AkRoavWhV" target="_blank"><button class="button home__button">ACESSAR PAGINA DE VENDA</button></a>
+                            <a href="https://shope.ee/1AkRoavWhV" target="_blank"><button class="button home__button">FAZER PEDIDO</button></a>
                         </div>
                     </div>
                 </div>
