--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 
                     <div class="testimonial__images">
                         <div class="testimonial__square"></div>
-                        <img src="assets/img-ja-sport/ja_sport.svg" alt="" class="testimonial__img">
+                        <img src="assets/img-jp-sport/jp store (Logo).svg" alt="" class="testimonial__img">
                     </div>
                 </div>
             </section>
