--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
 
 
-
-
-        <title>JA Store</title>
+        
+        <title>Jp Store</title>
     </head>
     <body>
+        
 
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
@@ -131,7 +131,7 @@
                                 SAIBA MAIS
                             </a>
 
-                            <a href="https://shope.ee/1AkRoavWhV" target="_blank"><button class="button home__button">FAZER PEDIDO</button></a>
+                            <a href="#" target="_blank"><button class="button home__button">FAZER PEDIDO</button></a>
                         </div>
                     </div>
                 </div>
@@ -512,6 +512,8 @@
         <!--=============== CARRINHO ===============-->
         <script src="assets/js/cart.js"></script>
 
-        <script src=""></script>
+        <div class="loader">
+            <img src="assets/img-jp-sport/preloader.gif" alt="">
+         </div>
     </body>
 </html>
