--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
                         <span class="home__price">R$ 109,90</span>
 
                         <div class="home__btns">
-                            <a href="https://wa.me/message/FBXH2AOCTJA2K1" class="button button--gray button--small">
+                            <a href="https://api.whatsapp.com/send?phone=5587996437865&text=Ol%C3%A1%2C%20estou%20interessado%20nas%20camisas%20de%20time%20do%20seu%20cat%C3%A1logo!" class="button button--gray button--small">
                                 SAIBA MAIS
                             </a>
 
-                            <a href="#" target="_blank"><button class="button home__button">FAZER PEDIDO</button></a>
+                            <a href="https://api.whatsapp.com/send?phone=5587996437865&text=Ol%C3%A1%2C%20estou%20interessado%20em%20comprar%20a%20nova%20camisa%20da%20sele%C3%A7%C3%A3o%20brasileira!" target="_blank"><button class="button home__button">FAZER PEDIDO</button></a>
                         </div>
                     </div>
                 </div>
