--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
                 <div class="featured__container grid">
                     <article class="featured__card">
-                        <span class="featured__tag">Venda</span>
+                        <span class="featured__tag">Frete grátis</span>
 
                         <img src="assets/img/mulher_camisa-branca01.svg" alt="" class="featured__img">
 
@@ -154,11 +154,11 @@
                             <span class="featured__price">R$ 150</span>
                         </div>
 
-                        <button class="button featured__button">ADICIONAR AO CARRINHO</button>
+                        <button class="button featured__button">Fazer pedido</button>
                     </article>
 
                     <article class="featured__card">
-                        <span class="featured__tag">Venda</span>
+                        <span class="featured__tag">Frete grátis</span>
 
                         <img src="assets/img/camisa_preta-1.svg" alt="" class="featured__img">
 
@@ -167,11 +167,11 @@
                             <span class="featured__price">R$ 150</span>
                         </div>
 
-                        <button class="button featured__button">ADICIONAR AO CARRINHO</button>
+                        <button class="button featured__button">Fazer pedido</button>
                     </article>
 
                     <article class="featured__card">
-                        <span class="featured__tag">Venda</span>
+                        <span class="featured__tag">Frete grátis</span>
 
                         <img src="assets/img/camisa001.svg" alt="" class="featured__img">
 
@@ -180,7 +180,7 @@
                             <span class="featured__price">R$ 180</span>
                         </div>
 
-                        <button class="button featured__button">ADICIONAR AO CARRINHO</button>
+                        <button class="button featured__button">Fazer pedido</button>
                     </article>
                 </div>
             </section>
