--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
                     <article class="featured__card">
                         <span class="featured__tag">Frete grátis</span>
 
-                        <img src="assets/img/mulher_camisa-branca01.svg" alt="" class="featured__img">
+                        <img src="assets/img-jp-sport/camisa_palmeiras.svg" alt="" class="featured__img">
 
                         <div class="featured__data">
-                            <h3 class="featured__title">Camiseta Feminina</h3>
-                            <span class="featured__price">R$ 150</span>
+                            <h3 class="featured__title">Palmeiras 22/23</h3>
+                            <span class="featured__price">R$ 119,90</span>
                         </div>
 
                         <button class="button featured__button">Fazer pedido</button>
@@ -160,11 +160,11 @@
                     <article class="featured__card">
                         <span class="featured__tag">Frete grátis</span>
 
-                        <img src="assets/img/camisa_preta-1.svg" alt="" class="featured__img">
+                        <img src="assets/img-jp-sport/camisa_casal_brasil.svg" alt="" class="featured__img">
 
                         <div class="featured__data">
-                            <h3 class="featured__title">Camisa Masculina Preta</h3>
-                            <span class="featured__price">R$ 150</span>
+                            <h3 class="featured__title">Brasil edição especial 22</h3>
+                            <span class="featured__price">R$ 119,90</span>
                         </div>
 
                         <button class="button featured__button">Fazer pedido</button>
